--- a/lab_1_cms/lab1_key.Rmd
+++ b/lab_1_cms/lab1_key.Rmd
@@ -93,3 +93,53 @@ sf_trees_unite <- sf_trees %>%
   unite("id_status", tree_id, legal_status, sep = '_COOL_')
 ```
 
+## Make maps 
+
+**Step 1** Convert Lat/Lon to spatial points 
+
+```{r}
+blackwood_acacia_sf <- blackwood_acacia_df %>% 
+  drop_na(lat, lon) %>% 
+  st_as_sf(coords = c('lon', 'lat'))
+
+# we need to tell R what the coordinate reference system is 
+
+st_crs(blackwood_acacia_sf) <- 4326
+
+ggplot(data = blackwood_acacia_sf) +
+  geom_sf(color = 'darkgreen') +
+  theme_minimal()
+```
+
+read in sf shapefile 
+
+```{r}
+sf_map <- read_sf(here('data', 'sf_map', 'tl_2017_06075_roads.shp'))
+
+sf_map_transform <- st_transform(sf_map, 4326)
+
+ggplot(data = sf_map_transform) +
+  geom_sf()
+```
+
+# Combine maps
+
+```{r}
+ggplot() +
+  geom_sf(data = sf_map,
+          size = .1,
+          color = 'darkgrey') +
+  geom_sf(data = blackwood_acacia_sf,
+          size = .5,
+          color = 'red') +
+  theme_void() +
+  labs(title = 'Blackwood Acacias in SF')
+```
+
+```{r}
+tmap_mode('view')
+
+tm_shape(blackwood_acacia_sf) +
+  tm_dots()
+```
+
